--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <iframe src="https://webchat.botframework.com/embed/msdb-bot?t=jPTZKCLHExQ.cwA.HsQ.muiQhKPqhdDnJJ8b65Z5n7YGii7vZ-3J36i1IbJWbrc"></iframe>
+    <iframe src='https://webchat.botframework.com/embed/msdb-bot?s=z6lj6h4qkLg.cwA.NQw.ZIYnQXjW6TBASnwAZmiQCFaFVnBcPXgEZfY_fnPRfOg'></iframe>
 </body>
 
 </html>
