--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>MSDB Bot</title>
     <style>
          html {
