--- a/admin/index.html
+++ b/admin/index.html
@@ -23,8 +23,7 @@
         <script src="/node_modules/@angular/router/bundles/router.umd.min.js"></script>
 		<script src="/node_modules/@angular/http/bundles/http.umd.min.js"></script>
 		<script src="/node_modules/@angular/forms/bundles/forms.umd.min.js"></script>
-		<script src="/node_modules/@angular/material/bundles/material.umd.js"></script>
-		<script src="/node_modules/systemjs/dist/system-csp-production.src.js"></script>
+		<script src="/node_modules/systemjs/dist/system.js"></script>
 		<script src="js/config.js"></script>
 		<script>SystemJS.import("js/AppModule.js");</script>
 	</body>
