--- a/admin/html/home-template.html
+++ b/admin/html/home-template.html
@@ -6,5 +6,8 @@
         <tr>
             <td><a [routerLink]="['/regexps']">Expressions</a></td>
         </tr>
+        <tr>
+            <td><a [routerLink]="['/dialogs']">Dialogues</a></td>
+        </tr>
     </tbody>
 </table>
