--- a/admin/index.html
+++ b/admin/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<title>MSDB Bot Admin</title>
-		<meta charset="utf-8">
-		<meta name="author" content="Ugo Parlange">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/common.css">
-	</head>
-	<body>
-		<app></app>
-		<script src="/node_modules/jquery/dist/jquery.slim.min.js"></script>
-    	<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="/node_modules/core-js/client/shim.min.js"></script>
-        <script src="/node_modules/zone.js/dist/zone.min.js"></script>
-        <script src="/node_modules/rxjs/bundles/Rx.min.js"></script>
-		<script src="/node_modules/@angular/core/bundles/core.umd.min.js"></script>
-        <script src="/node_modules/@angular/common/bundles/common.umd.min.js"></script>
-		<script src="/node_modules/@angular/compiler/bundles/compiler.umd.min.js"></script>
-		<script src="/node_modules/@angular/platform-browser/bundles/platform-browser.umd.min.js"></script>
-        <script src="/node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.min.js"></script>
-        <script src="/node_modules/@angular/router/bundles/router.umd.min.js"></script>
-		<script src="/node_modules/@angular/http/bundles/http.umd.min.js"></script>
-		<script src="/node_modules/@angular/forms/bundles/forms.umd.min.js"></script>
-		<script src="/node_modules/systemjs/dist/system.js"></script>
-		<script src="js/config.js"></script>
-		<script>SystemJS.import("js/AppModule.js");</script>
-	</body>
+
+<head>
+	<title>MSDB Bot Admin</title>
+	<meta charset="utf-8">
+	<meta name="author" content="Ugo Parlange">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/github.min.css">
+	<link rel="stylesheet" href="css/common.css">
+</head>
+
+<body>
+	<app></app>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
+	<script src="/node_modules/jquery/dist/jquery.slim.min.js"></script>
+	<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="/node_modules/core-js/client/shim.min.js"></script>
+	<script src="/node_modules/zone.js/dist/zone.min.js"></script>
+	<script src="/node_modules/rxjs/bundles/Rx.min.js"></script>
+	<script src="/node_modules/@angular/core/bundles/core.umd.min.js"></script>
+	<script src="/node_modules/@angular/common/bundles/common.umd.min.js"></script>
+	<script src="/node_modules/@angular/compiler/bundles/compiler.umd.min.js"></script>
+	<script src="/node_modules/@angular/platform-browser/bundles/platform-browser.umd.min.js"></script>
+	<script src="/node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.min.js"></script>
+	<script src="/node_modules/@angular/router/bundles/router.umd.min.js"></script>
+	<script src="/node_modules/@angular/http/bundles/http.umd.min.js"></script>
+	<script src="/node_modules/@angular/forms/bundles/forms.umd.min.js"></script>
+	<script src="/node_modules/systemjs/dist/system.js"></script>
+	<script src="js/config.js"></script>
+	<script>SystemJS.import("js/AppModule.js");</script>
+</body>
+
 </html>
