--- a/admin/html/home-template.html
+++ b/admin/html/home-template.html
@@ -4,6 +4,9 @@
             <td><a [routerLink]="['/intents']">Intentions</a></td>
         </tr>
         <tr>
+            <td><a [routerLink]="['/entities']">Entités</a></td>
+        </tr>
+        <tr>
             <td><a [routerLink]="['/regexps']">Expressions</a></td>
         </tr>
         <tr>
