Manage entities Add test page Update dependencies

--- a/admin/html/home-template.html
+++ b/admin/html/home-template.html
@@ -12,5 +12,8 @@
         <tr>
             <td><a [routerLink]="['/dialogs']">Dialogues</a></td>
         </tr>
+        <tr>
+            <td><a [routerLink]="['/test']">Tester</a></td>
+        </tr>
     </tbody>
 </table>
