--- a/admin/index.html
+++ b/admin/index.html
@@ -29,7 +29,7 @@
 	<script src="/node_modules/@angular/forms/bundles/forms.umd.min.js"></script>
 	<script src="/node_modules/systemjs/dist/system.js"></script>
 	<script src="js/config.js"></script>
-	<script>SystemJS.import("js/AppModule.js");</script>
+	<script>SystemJS.import("AppModule");</script>
 </body>
 
 </html>
